# English-Accent-Classifier-App

./: .gitignore  GUI.py  LICENSE  README.md  gui.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
config/: default.yaml
scripts/: run_gui.py  test_classification.py  test_download.py  test_formatting.py  test_gui.py  test_mainloop.py
src/: __init__.py
src/english_accent_classifier/: __init__.py  accent_classifier.py  audio_processor.py  config.py  exceptions.py  gui.py
tests/: __init__.py  test_audio_processor.py  test_config.py  test_exceptions.py
