[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "english-accent-classifier"
version = "1.0.0"
description = "A tool for identifying English accents from YouTube videos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "English Accent Classifier Team"}
]
maintainers = [
    {name = "English Accent Classifier Team"}
]
keywords = ["accent", "classification", "speech", "youtube", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "pydub>=0.25.0",
    "speechbrain>=1.0.0",
    "yt-dlp>=2023.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pylint>=2.15.0",
]
gui = [
    # tkinter is included with Python
]

[project.urls]
Homepage = "https://github.com/yourusername/english-accent-classifier"
Repository = "https://github.com/yourusername/english-accent-classifier"
Issues = "https://github.com/yourusername/english-accent-classifier/issues"
Changelog = "https://github.com/yourusername/english-accent-classifier/blob/main/CHANGELOG.md"

[project.scripts]
english-accent-classifier = "english_accent_classifier.gui:run_gui"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
english_accent_classifier = ["*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["english_accent_classifier"]
known_third_party = ["torch", "speechbrain", "pydub", "yt_dlp"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "speechbrain.*",
    "pydub.*",
    "yt_dlp.*",
]
ignore_missing_imports = true

[tool.pylint.main]
disable = [
    "C0114",  # missing-module-docstring - we have docstrings
    "C0115",  # missing-class-docstring - we have docstrings
    "C0116",  # missing-function-docstring - we have docstrings
    "R0903",  # too-few-public-methods - acceptable for our use case
    "R0913",  # too-many-arguments - acceptable for configuration
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
